2008-10-30  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/Makefile.am:
	  Blacklist cdiocddasrc from state-change tests. Fixes #558277.

2008-10-24  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	oops, forgot to bump the version back to devel
	after the last release 0.10.9.1

2008-10-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_add_stream),
	(gst_rmdemux_descramble_mp4a_audio),
	(gst_rmdemux_handle_scrambled_packet):
	Add suport for mpeg4 and aac audio. See #556714.

2008-10-14  Michael Smith <msmith@songbirdnest.com>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	  Calculate samples per frame correctly for "MPEG 2.5" layer 3.
	  Fixes skipping on these files.

2008-10-14  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Robin Stocker <robin at nibor dot org>

	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_init),
	(handle_sequence), (gst_mpeg2dec_setcaps):
	* ext/mpeg2dec/gstmpeg2dec.h:
	Prefer the container's PAR over the stream's PAR if it's
	given in the srcpad caps. Fixes bug #556184.

2008-10-13  Stefan Kost  <ensonic@users.sf.net>

	* ext/a52dec/Makefile.am:
	* ext/amrnb/Makefile.am:
	* ext/cdio/Makefile.am:
	* ext/dvdnav/Makefile.am:
	* ext/dvdread/Makefile.am:
	* ext/lame/Makefile.am:
	* ext/mad/Makefile.am:
	* ext/mpeg2dec/Makefile.am:
	* ext/sidplay/Makefile.am:
	* gst/ac3parse/Makefile.am:
	* gst/asfdemux/Makefile.am:
	* gst/dvdlpcmdec/Makefile.am:
	* gst/dvdsub/Makefile.am:
	* gst/iec958/Makefile.am:
	* gst/mpegaudioparse/Makefile.am:
	* gst/mpegstream/Makefile.am:
	* gst/realmedia/Makefile.am:
	* gst/synaesthesia/Makefile.am:
	  Don't install static libs for plugins. Fixes #550851 for ugly.

2008-10-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event):
	Post a GST_ELEMENT_ERROR if we get EOS before seeing any valid
	frames. Partially fixes bug #552237.

2008-10-09  Stefan Kost  <ensonic@users.sf.net>
